# bkit

./: .readthedocs.yaml  LICENSE  README.md  setup.cfg  setup.py
.ipynb_checkpoints/: Milestoning_Calculations-checkpoint.ipynb  Milestoning_Generate-checkpoint.ipynb  define_milestones-checkpoint.ipynb  every_day_im_milestoning-checkpoint.ipynb  milestoning_calcs-checkpoint.ipynb
bkit/: __init__.py  _schedule.py  core.py  ctmc.py  legacy.py  markov.py  milestoning.py  plots.py  projection.py  util.py
bkit/milestoning/: transition_time_model.py
docs/: requirements.txt
docs/source/: INSTALL.rst  bkit.rst  conf.py  index.rst  modules.rst
docs/source/api/: ctmc.rst  index.rst  milestoning.rst
examples/CDK8-PL3/: define_milestones.ipynb  milestoning_calculations.ipynb  project_trajs.py  util.py
examples/cdk/: define-milestones.ipynb  define_milestones.ipynb  milestoning-calcs.ipynb  plots.py  project_trajs.py
examples/cdk/.ipynb_checkpoints/: define_milestones-checkpoint.ipynb  milestoning-calcs-checkpoint.ipynb
notebooks/: define_milestones.ipynb  milestoning_1d.ipynb  milestoning_calcs.ipynb
notebooks/.ipynb_checkpoints/: every_day_im_milestoning-checkpoint.ipynb
