[metadata]
name = bkit
version = 0.1.0
description = Binding Kinetics Toolkit
license = MIT
license_files = LICENSE
url = https://github.com/chang-group/bkit
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry
author= Jeff Thompson
author_email = jeffreyt@ucr.edu

[options]
packages = bkit
install_requires = 
    msmtools
